fix bxslider and reposition 'glasses' text on tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -599,8 +599,9 @@ footer {
   }
 
   .men, .sale {
-    border-right: 2px solid #fff;
+    border-right: 1px solid #fff;
   }
+
   .trends, .bags {
     border-left: 1px solid #fff;
   }
@@ -609,14 +610,42 @@ footer {
     border-left: 2px solid #fff;
   }
 
-  ul.bxslider li img {
-    width: 30%;
+  .glasses a {
+    position: absolute;
+    left: -18px;
+  }
+
+  .bxslider {
+    display: flex;
+    justify-content: center;
+  }
+
+  .bx-viewport {
+    height: 415px !important;
+  }
+
+  .bxslider li {
+    width: 50vw !important;
+    padding: 0;
+    margin: 0;
+  }
+  .bxclone img {
+    width: 50%;
     margin: 0 auto;
+  }
+
+  /*li.bx-clone {
+    width: 100%;
+  }*/
+
+  .bx-viewport ul{
+    overflow: visible;
+    height: 325px ;
   }
 
 
   .featured-products img {
-    width: 85%;
+    width: 75%;
     height: auto;
 
   }
@@ -662,6 +691,8 @@ footer {
   .social-text {
     display: inline;
   }
+
+
 
 }
 
@@ -723,4 +754,18 @@ footer {
   .social {
     margin-right: 60px;
   }
+
+  /* BxSlider */
+
+  /*.bx-viewport {
+    overflow: auto;
+  }*/
+
+  /*.bxslider {
+    width: 520%;
+  }*/
+
+  /*li.bx-clone {
+    width: 100%;
+  }*/
 }
